--- a/Space_Game/settings.json
+++ b/Space_Game/settings.json
@@ -1,10 +1,1 @@
-{
-  "BulletColor": {
-    "alpha": 255,
-    "red": 255,
-    "green": 0,
-    "blue":  255
-  },
-  "EnemyDifficulty": 2,
-  "GameTime": 60
-}
+{"BulletColor":"#415E4B","GameTime":20,"EnemyDifficulty":1}
