--- a/Space_Game/Space_Game.csproj
+++ b/Space_Game/Space_Game.csproj
@@ -84,6 +84,12 @@
     <Compile Include="AssignControl.Designer.cs">
       <DependentUpon>AssignControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="ColorPrompt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ColorPrompt.Designer.cs">
+      <DependentUpon>ColorPrompt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Game.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +139,9 @@
     <Compile Include="UserSettings.cs" />
     <EmbeddedResource Include="AssignControl.resx">
       <DependentUpon>AssignControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ColorPrompt.resx">
+      <DependentUpon>ColorPrompt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Game.resx">
       <DependentUpon>Game.cs</DependentUpon>
